// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`expression_as_attribute.html.erb 1`] = `
====================================options=====================================
parsers: ["erb"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<button disabled=<% disabled %>></button>

<button disabled=<% disabled_long_long_long ? long_long_long_long_long_long_logic : long_long_long_long_long_long_logic %>></button>

=====================================output=====================================
<button disabled="<% disabled %>"></button>

<button
  disabled="<%
  if disabled_long_long_long
    long_long_long_long_long_long_logic
  else
    long_long_long_long_long_long_logic
  end
%>"
></button>

================================================================================
`;

exports[`expression_inside_attribute.html.erb 1`] = `
====================================options=====================================
parsers: ["erb"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<img src="<% 'hey' %>" >

<img src="<% disabled_long_long_long ? long_long_long_long_long_long_logic : long_long_long_long_long_long_logic %>">
=====================================output=====================================
<img src="<% 'hey' %>" />

<img
  src="<%
  if disabled_long_long_long
    long_long_long_long_long_long_logic
  else
    long_long_long_long_long_long_logic
  end
%>"
/>

================================================================================
`;

exports[`long_start_expression.html.erb 1`] = `
====================================options=====================================
parsers: ["erb"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<%= link_to signout_path, class: "very-long-class-name-here-to-cause-line-break-break-break-break" do %>
    Welcome
<% end %>
=====================================output=====================================
<%= link_to signout_path, class: "very-long-class-name-here-to-cause-line-break-break-break-break" do %>
  Welcome
<% end %>

================================================================================
`;
